--- a/src/main/webapp/content/css/modern-business.css
+++ b/src/main/webapp/content/css/modern-business.css
@@ -88,6 +88,7 @@ footer {
     }
 
     header.carousel .carousel {
-        height: 70%;
+        height: 100%;
+        max-height: 2000px;  
     }
 }
